package com.nanyin.pattern.v2.factory.methodFactory;


public interface WeaponFactory {
    public Weapon build(boolean isEnchanted);
}
